[project]
name = "transform"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
    {name = "mingk42", email = "xoals123456t@gmail.com"},
    {name = "HaramSs", email = "haram8274@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
